More work towards good looking landing page

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@std/esm": "^0.12.4",
+    "ejs": "^2.5.7",
     "express": "^4.16.2"
   },
   "devDependencies": {
