Add a static 502 page and bump node versions

--- a/config/nginx/webby.conf
+++ b/config/nginx/webby.conf
@@ -9,6 +9,8 @@ server {
     root /home/webby/webby/public;
     client_max_body_size 20M;
 
+    error_page 502 /502.html;
+
     location / {
         try_files $uri @webby;
         access_log off;
