Fully migrated to Redux with minor website redesign

--- a/package.json
+++ b/package.json
@@ -20,11 +20,20 @@
     "babel-loader": "^8.0.0-beta",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.5",
+    "immutable": "^3.8.2",
+    "less": "^2.7.2",
+    "less-loader": "^4.1.0",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-router5": "^6.0.2",
+    "redux-thunk": "^2.3.0",
+    "router5": "^6.3.0",
     "sass-loader": "^7.0.3",
+    "semantic-ui-less": "^2.3.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.16.1",
