--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.16.2",
     "express-ws": "^4.0.0",
     "lodash": "^4.17.10",
+    "lz-string": "1.4.4",
     "ws": "^6.0.0"
   },
   "devDependencies": {
