Semi-working registration and authentication

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,4 +1,22 @@
 NODE_ENV: local
+
+## HTTP server settings
 PORT: 3000
+BASE_URL: http://localhost:3000
+
+## Recaptcha settings
 RECAPTCHA_SITE_KEY: 6Lfd12YUAAAAADN6PHTl2lXzJWjP0clsIu2tYm8h
 RECAPTCHA_SECRET: null
+
+## Mailer settings
+MAIL_USE_MAILGUN: false
+MAIL_USE_CONSOLE: true
+MAIL_DEFAULT_SENDER: Warsow <no-reply@warsow.net>
+
+## Mailgun settings
+MAILGUN_DOMAIN: null
+MAILGUN_API_KEY: null
+MAILGUN_API_PUBLIC_KEY: null
+
+## Auth settings
+AUTH_SECRET_SIZE: 4096
