--- a/packages/warsow-web-client/package.json
+++ b/packages/warsow-web-client/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-router5": "^6.0.2",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
     "router5": "^6.3.0",
     "semantic-ui-css": "^2.3.3",
